--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -71,3 +71,39 @@ $section-headings-color: #01665E;
     font-size: 0.75rem;
   }
 }
+
+.page-header-slim {
+  color: $header-heading-color;
+  text-align: center;
+  background-color: $header-bg-color;
+  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
+
+  @include large {
+    padding: 0.5rem 0.25rem;
+  }
+
+  @include medium {
+    padding: 0.2rem 0.1rem;
+  }
+
+  @include small {
+    padding: 0.1rem 0rem;
+  }
+}
+
+.page-name {
+  margin-top: 0;
+  margin-bottom: 0.1rem;
+
+  @include large {
+    font-size: 1.75rem;
+  }
+
+  @include medium {
+    font-size: 1.25rem;
+  }
+
+  @include small {
+    font-size: 0.75rem;
+  }
+}
